k8s/deployment/dit-calendar-server.yml
kind: Service
apiVersion: v1
metadata:
  name: dit-calendar-server
  annotations:
    dev.okteto.com/auto-ingress: "true"
spec:
  type: ClusterIP
  ports:
  - name: "dit-calendar"
    port: 8080
  selector:
    app: dit-calendar
    tier: backend

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: dit-calendar-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dit-calendar
      tier: backend
  template:
    metadata:
      labels:
        app: dit-calendar
        tier: backend
    spec:
      volumes:
        - name: dit-calendar-volume
          persistentVolumeClaim:
            claimName: dit-calendar-storage
      containers:
      - image: ditcalendar/dit-calendar-server:latest
        name: dit-calendar-server
        resources:
          requests:
            cpu:    "1"
            memory: "2Gi"
          limits:
            cpu:    "1"
            memory: "2Gi"
        volumeMounts:
          - name: dit-calendar-volume
            mountPath: /app/state
