k8s/deployment/dit-calendar-ui.yml
apiVersion: v1
kind: Service
metadata:
  name: dit-calendar-ui
spec:
  selector:
    app: dit-calendar
    tier: frontend
  ports:
    - protocol: "TCP"
      port: 8000
      targetPort: 8000
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dit-calendar-ui
spec:
  selector:
    matchLabels:
      app: dit-calendar
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: dit-calendar
        tier: frontend
    spec:
      containers:
        - name: nginx
          image: ditcalendar/dit-calendar-ui:latest
          resources:
            limits:
              cpu: "50m"
              memory: "50Mi"
          lifecycle:
            preStop:
              exec:
                command: ["/usr/sbin/nginx","-s","quit"]
